--- a/recipe.html
+++ b/recipe.html
@@ -133,7 +133,6 @@
           <h3>Process</h3>
           <ol>
 
-            <div class="process-step">
               <li>Preheat your oven to 400F/200C or fire up your barbeque, trying to get it is as close to this 
               temperature as you can (our barbeque never gets that low, I aim for 450F). Line a baking sheet with 
               parchment paper or aluminum foil. If using a barbeque, set out some foil on a pan; parchment won't survive 
@@ -141,9 +140,7 @@
               </li>
               <div class="slide-button">Done this step</div>
               <img class="process-image-large" src="./images/raw_salmon_small.jpeg" alt="Salmon on foil" />
-            </div>
 
-            <div class="process-step">
               <li>If you have pre-ground <b>lime powder</b>, add that to the bowl. I haven't been able to find this 
               in any of the nearby shops so I use dried <b>kaffir lime leaves</b> which I grind by hand. If you're 
               using lime leaves, grind them in the mortar or a spice grinder. Using a mortar can be a bit challenging, 
@@ -154,9 +151,7 @@
               <img class="process-image-large" src="./images/partially_ground_lime_small.jpeg" alt="Partially ground 
               lime leaves" />
               <img class="process-image-large" src="./images/ground_lime.jpeg" alt="Ground lime leaves" />
-            </div>
 
-            <div class="process-step">
               <li>Using a mortar and pestle or the spice grinder, grind your <b>rose petals</b> as fine as you can. 
               I have a fairly small mortar, so I grind one half of the petals first, then the other, so I don't spill half 
               of them on the counter. Add to your lime powder.
@@ -164,17 +159,13 @@
               <div class="slide-button">Done this step</div>
               <img class="process-image-large" src="./images/roses_whole_with_pestle_small.jpeg" alt="Rose petals in mortar" /> 
               <img class="process-image-large" src="./images/ground_roses_3_small.jpeg" alt="Ground rose petals" />
-            </div>
 
-            <div class="process-step">
               <li>Zest your <b>lime</b> and <b>orange</b> into a medium bowl. Measure in the <b>cumin</b>, <b>cinnamon</b>, 
               and <b>sumac</b>. Give it a good stir with your measuring spoon.
               </li>
               <div class="slide-button">Done this step</div>
               <img class="process-image-large" src="./images/final_spice_mix_blended_small.jpeg" alt="Blended spice mix" />
-            </div>
 
-            <div class="process-step">
               <li>Now add the <b>olive oil</b>. Start with 3 tablespoons, mix it in and check the consistency. With this 
               amount of oil it should feel like a rub. If you like a more oily marinade, keep adding oil one tablespoon 
               at a time until it seems right to you, but you shouldn't need more than 6 tablespoons. Rub the marinade into 
@@ -184,9 +175,7 @@
               <div class="slide-button">Done this step</div>
               <img class="process-image-large" src="./images/oil_blended_small.jpeg" alt="Marinade" />
               <img class="process-image-large" src="./images/ready_for_oven_small.jpeg" alt="Salmon ready for oven" />
-            </div>
 
-            <div class="process-step">
               <li>Bake the salmon for 10-15 minutes if you have the smaller pieces, 30-35 minutes if cooking one big piece. 
               If you're using a gas barbeque, put the foil directly on the grill and cook for a little over half that time, 
               checking its progress periodically. (I had excellent results on the grill with a 2 1/2lb fillet for about 22 
@@ -194,7 +183,6 @@
               </li>
               <div class="slide-button">Done this step</div>
               <img class="process-image-large" src="./images/cooked_small.jpeg" alt="Cooked salmon" />
-            </div>
 
           </ol>
         </div>
@@ -202,8 +190,7 @@
       </section>
       <footer>
         <p>If you're interested in other recipes from <cite>Persiana</cite>, check it out on 
-        <span class="book-link"><a href="http://www.amazon.ca/Persiana-Recipes-Middle-East-Beyond/dp/1566569958/
-        ref=sr_1_1?ie=UTF8&amp;qid=1439056418&amp;sr=8-1&amp;keywords=persiana" target="_blank">Amazon</a>!</span>
+        <span class="book-link"><a href="http://www.amazon.ca/Persiana-Recipes-Middle-East-Beyond/dp/1566569958/ref=sr_1_1?ie=UTF8&amp;qid=1439056418&amp;sr=8-1&amp;keywords=persiana" target="_blank">Amazon</a>!</span>
       </footer>
     </div>
   </body>
