--- a/recipe.html
+++ b/recipe.html
@@ -17,9 +17,6 @@
     <div class="main">
 
       <section>
-        <div class="right" id="intro-image">
-          <img src="./images/rose_petal_mortar_angle_small.jpeg" alt="Rose petals in mortar" />
-        </div>
 
         <div id="hide-images">Hide Images</div>
 
@@ -37,7 +34,13 @@
           a little more cinnamon. I usually try to cook extra, as it's delicious cold the next day, but my family 
           often eats it all anyway - it's just too good! Serve it with a light green salad and you're set.</p>
         </div>
+
+        <div class="right" id="intro-image"  >
+          <img src="./images/rose_petal_mortar_angle_small.jpeg" alt="Rose petals in mortar" />
+        </div>
+
       </section>
+
       <section>
         <div class="cook-time-info">
           <h4>Serves 6</h4>
@@ -110,7 +113,7 @@
               a modern barbeque. The pan will be used to transport your salmon to and from the grill.
               </li>
               <div class="slide-button">Done this step</div>
-              <img class="process-image-large" src="./images/raw_salmon_small.jpeg" alt="Salmon on foil" />
+              <img class="process-image" src="./images/raw_salmon_small.jpeg" alt="Salmon on foil" />
 
               <li>If you have pre-ground <b>lime powder</b>, add that to the bowl. I haven't been able to find this 
               in any of the nearby shops so I use dried <b>kaffir lime leaves</b> which I grind by hand. If you're 
@@ -119,23 +122,23 @@
               the middle stem of the leaf. Remove these, as they're a little hard to chew!
               </li>
               <div class="slide-button">Done this step</div>
-              <img class="process-image-large" src="./images/partially_ground_lime_small.jpeg" alt="Partially ground 
+              <img class="process-image" src="./images/partially_ground_lime_small.jpeg" alt="Partially ground 
               lime leaves" />
-              <img class="process-image-large" src="./images/ground_lime.jpeg" alt="Ground lime leaves" />
+              <img class="process-image" src="./images/ground_lime.jpeg" alt="Ground lime leaves" />
 
               <li>Using a mortar and pestle or the spice grinder, grind your <b>rose petals</b> as fine as you can. 
               I have a fairly small mortar, so I grind one half of the petals first, then the other, so I don't spill half 
               of them on the counter. Add to your lime powder.
               </li>
               <div class="slide-button">Done this step</div>
-              <img class="process-image-large" src="./images/roses_whole_with_pestle_small.jpeg" alt="Rose petals in mortar" /> 
-              <img class="process-image-large" src="./images/ground_roses_3_small.jpeg" alt="Ground rose petals" />
+              <img class="process-image" src="./images/roses_whole_with_pestle_small.jpeg" alt="Rose petals in mortar" /> 
+              <img class="process-image" src="./images/ground_roses_3_small.jpeg" alt="Ground rose petals" />
 
               <li>Zest your <b>lime</b> and <b>orange</b> into a medium bowl. Measure in the <b>cumin</b>, <b>cinnamon</b>, 
               and <b>sumac</b>. Give it a good stir with your measuring spoon.
               </li>
               <div class="slide-button">Done this step</div>
-              <img class="process-image-large" src="./images/final_spice_mix_blended_small.jpeg" alt="Blended spice mix" />
+              <img class="process-image" src="./images/final_spice_mix_blended_small.jpeg" alt="Blended spice mix" />
 
               <li>Now add the <b>olive oil</b>. Start with 3 tablespoons, mix it in and check the consistency. With this 
               amount of oil it should feel like a rub. If you like a more oily marinade, keep adding oil one tablespoon 
@@ -144,8 +147,8 @@
               and <b>pepper</b>.
               </li>
               <div class="slide-button">Done this step</div>
-              <img class="process-image-large" src="./images/oil_blended_small.jpeg" alt="Marinade" />
-              <img class="process-image-large" src="./images/ready_for_oven_small.jpeg" alt="Salmon ready for oven" />
+              <img class="process-image" src="./images/oil_blended_small.jpeg" alt="Marinade" />
+              <img class="process-image" src="./images/ready_for_oven_small.jpeg" alt="Salmon ready for oven" />
 
               <li>Bake the salmon for 10-15 minutes if you have the smaller pieces, 30-35 minutes if cooking one big piece. 
               If you're using a gas barbeque, put the foil directly on the grill and cook for a little over half that time, 
@@ -153,7 +156,7 @@
               minutes at 450F.) The fish should lightly flake when turned with a fork.
               </li>
               <div class="slide-button">Done this step</div>
-              <img class="process-image-large" src="./images/cooked_small.jpeg" alt="Cooked salmon" />
+              <img class="process-image" src="./images/cooked_small.jpeg" alt="Cooked salmon" />
 
           </ol>
         </div>
@@ -161,11 +164,10 @@
       </section>
       <footer>
         <p>If you're interested in other recipes from <cite>Persiana</cite>, check it out on 
-        <span class="book-link">
           <a href="http://www.amazon.ca/Persiana-Recipes-Middle-East-Beyond/dp/1566569958/ref=sr_1_1?ie=UTF8&amp;qid=1439056418&amp;sr=8-1&amp;keywords=persiana" target="_blank">Amazon</a>!
-        </span>
       </footer>
     </div>
+
   </body>
 
 </html>
